<resources>
    <string name="app_name">FirebaseAuthentication</string>
    <string name="firebase_authencation">Firebase Authencation</string>
    <string name="email_and_password">Email Authentication</string>
    <string name="phone_authentication">Phone Authentication</string>
    <string name="facebook_authentication">Facebook authentication</string>
    <string name="github_authentication">Github authentication</string>
    <string name="google_authentication">Google Authentication</string>
    <string name="firebase">Firebase</string>
    <string name="login">Login</string>
    <string name="not_a_user_click_here"><u>not a user ! click here</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="click_here_to_send_the_otp_again"><u>click here to send the OTP again !</u></string>
</resources>
