<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/fredoka_one"
            android:text="Firebase"
            android:autoSizeMinTextSize="25sp"
            android:autoSizeMaxTextSize="45sp"
            android:autoSizeTextType="uniform"
            android:lines="1"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="45sp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/fredoka_one"
            android:text="Authentication"
            android:autoSizeMinTextSize="15sp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeTextType="uniform"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/f_email"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_email"
        android:elevation="6dp"
        android:padding="10dp"
        android:text="@string/email_and_password"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/f_phone"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_phone"
        android:elevation="6dp"
        android:padding="10dp"
        android:text="@string/phone_authentication"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/f_google"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_google"
        android:elevation="6dp"
        android:padding="10dp"
        android:text="@string/google_authentication"
        android:textStyle="bold" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/f_fb"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_fb"
        android:elevation="6dp"
        android:padding="10dp"
        android:text="@string/facebook_authentication"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/f_github"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_github"
        android:elevation="6dp"
        android:padding="10dp"
        android:text="@string/github_authentication"
        android:textStyle="bold" />


</LinearLayout>